[package]
name = "cursive_tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cursive-syntect = "*"
syntect = "*"
pickledb = "*"
chrono = "*"
cursive_calendar_view = "*"

[dependencies.cursive]
version = "0.20.0"
default-features = false
features = ["pancurses-backend"]